# imgflash

./: .dockerignore  Dockerfile  README.md  build-from-template.sh  build.env  build.sh  create-template.sh
.github/workflows/: build.yml  publish-iso.yml  update-binaries.yml  update-template.yml
binaries/: busybox_MODPROBE  busybox_MOUNT  busybox_SH_IS_ASH
binaries/AMD64/: busybox_MODPROBE  busybox_MOUNT
binaries/ARM64/: busybox_MODPROBE  busybox_MOUNT
disktui-lite/: Cargo.toml  README.md
disktui-lite/src/: app.rs  disk.rs  handler.rs  init.rs  lib.rs  main.rs  notification.rs  theme.rs  tui.rs  ui.rs  utils.rs
scripts/: init.sh  installer.sh
tools/: extract-debian-kernel.sh
