[package]
name = "disktui-lite"
version = "1.0.0"
edition = "2024"
authors = ["ImgFlash Contributors"]
description = "Lightweight TUI disk image installer for minimal initramfs environments"
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
anyhow = "1"
nix = { version = "0.31", features = ["mount", "signal", "process", "reboot", "fs"] }
libc = "0.2"
uu_dd = "0.9"

[[bin]]
name = "disktui-lite"
path = "src/main.rs"

[profile.release]
opt-level = "z"         # 最小体积
lto = "fat"             # 启用链接时优化，使用 "fat" 模式以获得最佳效果
codegen-units = 1       # 禁用并行编译单元，确保全局优化
panic = "abort"         # 禁用回溯，减少运行时开销
strip = "symbols"       # 移除所有符号信息
debug = 0               # 禁用调试信息
incremental = false     # 禁用增量编译，确保全局优化
overflow-checks = false # 禁用整数溢出检查